--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /力扣/知识点/Solution.java
+/力扣/力扣杯/春2022/so.java
+/力扣/WeekGame/Game277/Solution.java
+/力扣/力扣杯/春2021/Day2/Solution.java
+/力扣/每日一题/Four/Four9/Solution.java
+/力扣/剑指Offer/Day1/Solution09.java
