刷题计划:编程能力Day3:加一 T66:考虑是否进位     1.不进位,,直接在当前位+1     2.进位,当前位为0,转而让下一位+1     3.如果全为9的话,直接新建一个新数组,`newArr[0]=1`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /力扣/知识点/Solution.java
 /力扣/学习计划/力扣杯/春2021/Day2/Solution.java
+/力扣/学习计划/编程能力/Day3/1367. 二叉树中的列表.md
+/力扣/学习计划/编程能力/Day3/Solution150.java
